Change padding to graph area for cell and tablet devices to avoid overlap of Powered by Google and e-mail status

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -918,7 +918,7 @@ body > footer > nav > a > i {
         padding-right: 10px;
         padding-bottom: 150px;
         padding-top: 75px;*/
-        padding: 100px 10px 150px 10px;
+        padding: 200px 10px 150px 10px;
     }    
    
     #right-conf-panel-div {
